minor alignmenyt bug fix

--- a/src/app/wca/pages/add-module/add-module.component.scss
+++ b/src/app/wca/pages/add-module/add-module.component.scss
@@ -361,7 +361,7 @@ img:hover {
  }
 
  .no-module{
-    width: 100%;
+    width: 80%;
     font-size: 32px;
     color: #1f3777;
     padding-top: 50px;
